# python-elastic-agent-client

./: .gitignore  .mypy.ini  .ruff.toml  Dockerfile  Makefile  NOTICE.txt  PUBLISHING.md  README.md  catalog-info.yaml  elastic-agent-client.proto  pyoxidizer.bzl  pyproject.toml  pyrightconfig.json  pytest.ini  renovate.json  requirements.txt  scratch.py  setup.py
.buildkite/: pipeline.yml  pull-requests.json
.buildkite/script/: git-setup.sh  run_linter_check.sh  run_notice_check.sh  run_proto_check.sh  shared.sh
.github/: CODEOWNERS
elastic-package/: elastic-agent.yaml  python-elastic-agent-client  python-elastic-agent-client.spec.yml
elastic_agent_client/: client.py  reader.py  version.py
elastic_agent_client/examples/fake/: component.py
elastic_agent_client/handler/: action.py  checkin.py
elastic_agent_client/service/: actions.py  checkin.py
elastic_agent_client/util/: async_tools.py  logger.py
elastic_connectors/: manifest.yml
elastic_connectors/docs/: README.md
es_agent_client/: client.py  reader.py
es_agent_client/examples/connectors/: component.py
es_agent_client/examples/fake/: component.py
es_agent_client/handler/: action.py  checkin.py
es_agent_client/service/: actions.py  checkin.py
es_agent_client/util/: async_tools.py  logger.py
requirements/: dev.txt  lib.txt
sample/: manifest.yml
sample/docs/: README.md
scripts/: download-proto.sh  generate.sh  proto-common.sh
tests/: test_client.py  test_reader.py
tests/service/: test_action.py  test_checkin.py
tests/util/: test_async_tools.py  test_logger.py
